--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <html lang="pt-BR">
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>minatopeu</title>
+    <title>da cena</title>
 </head>
 
 <body>
-    <header>DA CENA</header>
+    <header>minatoopeu</header>
 
-    <section class="MINA">
+    <section class="chamada">
         <div class="chamada-texto">
-            <h1>aikanalha</h1>
-            <p><div id="mina-top-eu"></div>
+            <h1>eu te amo luanna</h1>
+            <p>#euamoobaco</p>
+        </div>
 
         <div>
-            <iframe <iframe width="560" height="315" src="https://www.youtube.com/embed/aEE4JliEKRQ?si=SzVQtXRcEnb5E--t" </iframe> </iframe>
-        
-               
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/hpOcK-DGd_E?si=4FmnqqxNAycv64sn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
     <section class="categoria">
-        <h2>setajc2</h2>
+        <h2>minhas favs sz</h2>
         <div class="categoria-videos">
-            <a href="
+            <a href="https://www.youtube.com/watch?v=88OrAs6NckU">
+                <img src="https://th.bing.com/th/id/R.f3b0131f9b622c6e3dd08a9c2129097d?rik=zqBpAAiM%2bHfJvw&pid=ImgRaw&r=0" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=5guHdDMU_Wk">
+                <img src="https://th.bing.com/th/id/R.f226cdeb3b7b874e7e0b31b425aacc87?rik=QdXR94obRyl3Zw&pid=ImgRaw&r=0" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=zxIHZfNhMG4">
+                <img src="https://th.bing.com/th/id/OIP.xl9sb-ceg_js0WdNyxrxJwHaEK?rs=1&pid=ImgDetMain" />
             </a>
         </div>
     </section>
