--- a/index.html
+++ b/index.html
@@ -1,44 +1,87 @@
+<!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet">
-    <title>da cena</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <title>Em busca da cidade perdida</title>
 </head>
-
 <body>
-    <header>minatoopeu</header>
-
-    <section class="chamada">
-        <div class="chamada-texto">
-            <h1>eu te amo luanna</h1>
-            <p>#euamoobaco</p>
+    <main>
+        <div class="passo ativo" id="passo-0">
+            <img src="img/cenario-passo0.webp" alt="">
+            <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
+            <button class="btn-proximo" data-proximo="1">Morro do ze bombom</button>
+            <button class="btn-proximo" data-proximo="2">Morro do ze pqn</button>
+        </div>
+        <div class="passo" id="passo-1">
+            <p>Você começa sua jornada no Morro do ze bombom, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
+            <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
+            <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
+        </div>
+        <div class="passo" id="passo-2">
+            <p>No morro do ze pequeno, você assiste o filme cidade de Deus. E o dono do boteco te entrega uma carta, uma das pistas indica que para localizar a entrada para a cidade perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
+            <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
+            <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
+        </div>
+        <div class="passo" id="passo-3">
+            <p>No beco do morro, você encontra uma antiga inscrição apontando que a próxima pista está
+                localizada no Amazonas.</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
         </div>
 
-        <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/hpOcK-DGd_E?si=4FmnqqxNAycv64sn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="passo" id="passo-4">
+            <img src="img/cenario-passo4-voltar-casa.jfif" alt="imagem voltando para casa e desitindo da aventura">
+            <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
+                encontrado.</p>
         </div>
-    </section>
 
-    <section class="categoria">
-        <h2>minhas favs sz</h2>
-        <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=88OrAs6NckU">
-                <img src="https://th.bing.com/th/id/R.f3b0131f9b622c6e3dd08a9c2129097d?rik=zqBpAAiM%2bHfJvw&pid=ImgRaw&r=0" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=5guHdDMU_Wk">
-                <img src="https://th.bing.com/th/id/R.f226cdeb3b7b874e7e0b31b425aacc87?rik=QdXR94obRyl3Zw&pid=ImgRaw&r=0" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=zxIHZfNhMG4">
-                <img src="https://th.bing.com/th/id/OIP.xl9sb-ceg_js0WdNyxrxJwHaEK?rs=1&pid=ImgDetMain" />
-            </a>
+        <div class="passo" id="passo-5">
+            <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
+                pista está no Amazonas.</p>
+            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
         </div>
-    </section>
 
+        <div class="passo" id="passo-6">
+            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
+            <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
+        </div>
+
+        <div class="passo" id="passo-7">
+            <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
+            <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
+            <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
+        </div>
+
+        <div class="passo" id="passo-8">
+            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+        </div>
+
+        <div class="passo" id="passo-9">
+            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a para um nave espacial.</p>
+            <button class="btn-proximo" data-proximo="11">entrar no foguete</button>
+        </div>
+
+        <div class="passo" id="passo-10">
+            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da cidade perdida
+                aqui.</p>
+            <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
+        </div>
+
+        <div class="passo" id="passo-11">
+            <img src="img/cenario-passo11-cidade-perdida.webp" alt="nemcreio">
+            <p>chegando no destino voce desce e encontra Rick, VOCE ESTA NA DIMENSAO C-137 @#@#|@#|#@##|</p>
+        </div>
+
+        <div class="passo" id="passo-12">
+            <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra uma nave espacial.</p>
+            <button class="btn-proximo" data-proximo="11">entra na nave</button>
+        </div>
+    </main>
+    <script src="script.js"></script>
 </body>
-
 </html>
